--- a/QuizApp/dashboard/dashboard.css
+++ b/QuizApp/dashboard/dashboard.css
@@ -344,20 +344,41 @@ i{
 
 /* Toggler Box */
 .toggler-box {
-    opacity: 0;
+    position: fixed;
+    top: 15px;
+    right: 15px;
+    z-index: 2000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(106, 0, 255);
+    width: 50px; /* Adjust as needed */
+    height: 50px; /* Adjust as needed */
 }
 
 .toggler-box .toggler-icon {
-    position: absolute;
-    padding: 15%;
-    right: 0px;
-    top: 0px;
-    z-index: 100;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px; /* Adjust size */
     background-color: black;
     color: white;
     border-radius: 10px;
+    cursor: pointer;
 }
 
+@media (max-width: 991px) {
+    .toggler-box {
+        opacity: 1;
+        display: flex;
+    }
+}
+
+.d-none {
+    display: none;
+}
 @media(max-width: 991px) {
     .side-nav {
         transform: translateX(-250px); 
